# pocket

./: .gitignore  CMakeLists.txt  README.md  i2s_rx.pio  i2s_tx.pio  main.c  run.sh
Schematics/: Pedal.kicad_prl  Pedal.kicad_pro  Pedal.kicad_sch  dac_adc.bak
